tests/e2e/persistentVolumeClaimRetentionPolicy-collector/00-assert.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stateful-collector
spec:
  podManagementPolicy: Parallel
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: "Retain"
    whenScaled: "Delete"
