tests/e2e/persistentVolumeClaimRetentionPolicy-collector/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: persistent-volume-claim-retentionpolicy
spec:
  steps:
  - name: step-00
    try:
    - apply:
        file: 00-install.yaml
    - assert:
        file: 00-assert.yaml
